--- a/package.json
+++ b/package.json
@@ -5,18 +5,24 @@
     "cssnano": "^6.0.3",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
+    "gulp-babel": "^8.0.0",
+    "gulp-concat": "^2.6.1",
     "gulp-concat-css": "^3.1.0",
+    "gulp-fonter": "^0.3.0",
     "gulp-imagemin": "^7.1.0",
     "gulp-plumber": "^1.2.1",
     "gulp-postcss": "^9.0.1",
     "gulp-pug": "^5.0.0",
+    "gulp-sourcemaps": "^3.0.0",
+    "gulp-uglify-es": "^3.0.0",
     "html-minifier": "^4.0.0",
     "postcss": "^8.4.32",
     "postcss-combine-media-query": "^1.0.1",
     "prettier": "^3.1.1",
     "stylelint": "^16.1.0",
     "stylelint-config-standard": "^36.0.0",
-    "stylelint-selector-bem-pattern": "^3.0.1"
+    "stylelint-selector-bem-pattern": "^3.0.1",
+    "@babel/core": "^7.23.7"
   },
   "name": "focus",
   "description": "",
